[gd_scene load_steps=12 format=3 uid="uid://c08dlpassngyf"]

[ext_resource type="Script" path="res://core/token.gd" id="1_arks0"]
[ext_resource type="Texture2D" uid="uid://vavlxvtof7ca" path="res://assets/placeholder/hero/Scout.png" id="2_6jyuc"]
[ext_resource type="Script" path="res://core/combat_model/pathing.gd" id="2_wrauk"]
[ext_resource type="PackedScene" uid="uid://ckfqr3mm4hdt5" path="res://core/token/status_pair.tscn" id="3_na6b2"]
[ext_resource type="PackedScene" uid="uid://dptll61yjcygq" path="res://core/UI/value_bar.tscn" id="3_xvtha"]
[ext_resource type="Script" path="res://core/token/stacking_hbox.gd" id="6_33pwd"]

[sub_resource type="Animation" id="Animation_v8shg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5mvo7"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_monvl"]
resource_name = "melee"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:melee_animation_var")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 0.3, 0]
}

[sub_resource type="Animation" id="Animation_2b783"]
resource_name = "move_path"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:move_animation_var")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oe23w"]
_data = {
"RESET": SubResource("Animation_v8shg"),
"fade": SubResource("Animation_5mvo7"),
"melee": SubResource("Animation_monvl"),
"move_path": SubResource("Animation_2b783")
}

[node name="token" type="Node2D"]
position = Vector2(464, 229)
script = ExtResource("1_arks0")

[node name="pathing" type="Node" parent="."]
script = ExtResource("2_wrauk")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_6jyuc")

[node name="animate" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_oe23w")
}

[node name="UILayer" type="Control" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0

[node name="barbox" type="VBoxContainer" parent="UILayer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 1

[node name="StatusBox" type="HBoxContainer" parent="UILayer/barbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0

[node name="StatusPair" parent="UILayer/barbox/StatusBox" instance=ExtResource("3_na6b2")]
visible = false
layout_mode = 2

[node name="HealthBar" parent="UILayer/barbox" instance=ExtResource("3_xvtha")]
unique_name_in_owner = true
layout_mode = 2

[node name="StaminaBar" parent="UILayer/barbox" instance=ExtResource("3_xvtha")]
unique_name_in_owner = true
layout_mode = 2
color = Color(1, 0.964706, 0, 1)

[node name="MoraleBar" parent="UILayer/barbox" instance=ExtResource("3_xvtha")]
unique_name_in_owner = true
layout_mode = 2
color = Color(0.12549, 0, 0.941176, 1)

[node name="stacking_hbox" type="Control" parent="UILayer"]
custom_minimum_size = Vector2(40, 10)
anchors_preset = 0
offset_left = -3.0
offset_top = 58.0
offset_right = 37.0
offset_bottom = 68.0
script = ExtResource("6_33pwd")
